objects/privacycenter__Privacy_Center_Schedule__c.object
<CustomObject>
    <fields>
        <fullName>privacycenter__Masking_Execution_Id__c</fullName>
        <label>Execution Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>privacycenter__Policy_Name__c</fullName>
        <label>Policy Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>privacycenter__Scheduled_Date__c</fullName>
        <label>Scheduled Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>privacycenter__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Skipped</fullName>
                </value>
                <value>
                    <fullName>Aborted</fullName>
                </value>
                <value>
                    <fullName>Syncing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Privacy Center Schedule</label>
    <listViews>
        <fullName>privacycenter__All</fullName>
        <columns>NAME</columns>
        <columns>privacycenter__Policy_Name__c</columns>
        <columns>privacycenter__Scheduled_Date__c</columns>
        <columns>privacycenter__Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>privacycenter__Masking_Execution_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>S-{00000}</displayFormat>
        <label>Privacy Center Schedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Privacy Center Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>